# idioms

./: .gitignore  .pre-commit-config.yaml  App.tsx  README.md  STRUCTURE.md  app.json  babel.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
app/: _layout.tsx  index.tsx
backend/: .env.example  .gitignore  API_KEY_MIDDLEWARE.md  README.md  docker-compose.yaml  main.py  pyproject.toml
backend/app/: database.py  main.py  middleware.py  settings.py
backend/app/models/: idioms.py  users.py
backend/app/routers/: idioms.py  users.py
backend/app/schemas/: __init__.py  idioms.py  users.py
backend/data_mining/: .env.example  concat_jsons.py  explainer.py  gatherer.py  merge_jsons.py  miner.py  post_idioms.sh  smiley_generator.py  stats_generator.py  stats_generator_correction.py  translator.py
backend/languages/: spanish.json
backend/languages/english/: english.json  french.json  german.json  root.json  spanish.json
backend/tests/: conftest.py  docker-compose-test.yaml
backend/tests/integration/: __init__.py  conftest.py  env.testing  test_main.py  test_middleware.py
backend/tests/integration/routers/: test_idioms.py
backend/tests/resources/: sample_idioms.json
backend/tests/unit/: __init__.py  test_middleware.py
components/: .HapticTab.tsx.swp  Card.tsx
constants/: icons.ts
frontend/: .env.development  .env.web  .eslintrc.js  .gitignore  .prettierrc  WEB_SETUP.md  app.config.js  app.json  eas.json  env.example  env.ts  eslint.config.js  index.js  metro.config.cjs  metro.config.js  package-lock.json  package.json  (+10 more)
(+122 files in other folders)
